bs4_action + unpublished status template tag (#860)
* created custom template tag to render alert button

* make format

* added bs4_actions to rob assignment list header

* added aria, fixed indentation, removed d-inline-block

* updated templates

* updated more templates

* updated remaining templates

* html formatting

* fixed aria and study detail float right

* fix animal group header todo

* swap button to link for height

* fix session list page

* stop button shrinking

* add aria

* empty section fix

* add django-browser-reload

* Update middleware.py

* Update middleware.py

* add unpublished logo

* fix IV names

* prevent modal from being shown

* fix

* rename template

* editorial changes

---------

Co-authored-by: casey1173 <caseyhansen1999@gmail.com>
Co-authored-by: Casey Hansen <42587248+casey1173@users.noreply.github.com>
Co-authored-by: Andy Shapiro <shapiromatron@gmail.com>

--- a/hawc/apps/assessment/templates/assessment/assessmentvalue_detail.html
+++ b/hawc/apps/assessment/templates/assessment/assessmentvalue_detail.html
@@ -1,20 +1,20 @@
 {% extends 'assessment-rooted.html' %}
 
 {% load hawc %}
+{% load bs4 %}
 
 {% block content %}
 {% if crud == "Read" %}
-<div class="dropdown btn-group float-right">
-    <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Actions</a>
-    <div class="dropdown-menu dropdown-menu-right">
-        {% if obj_perms.edit %}
+<div class="d-flex">
+    <h3>Assessment Value for {{object.assessment}}</h3>
+    {% if obj_perms.edit %}
+    {% actions %}
         <a class="dropdown-item" href="{% url 'assessment:values-update' object.pk %}">Update</a>
         <a class="dropdown-item" href="{% url 'assessment:values-delete' object.pk %}">Delete</a>
-        {% endif %}
-    </div>
+    {% endactions %}
+    {% endif %}
 </div>
 {% endif %}
-<h3>Assessment Value for {{object.assessment}}</h3>
 <table class="table table-sm table-striped">
     <colgroup>
         <col style="width: 30%;">
