--- a/hawc/apps/lit/templates/lit/search_detail.html
+++ b/hawc/apps/lit/templates/lit/search_detail.html
@@ -1,11 +1,12 @@
 {% extends 'assessment-rooted.html' %}
 
+{% load bs4 %}
+
 {% block content %}
-  <h2 class="d-inline-block">{{object}}</h2>
-  {% if crud == "Read" %}
-    <div class="dropdown btn-group float-right">
-      <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Actions</a>
-      <div class="dropdown-menu dropdown-menu-right">
+  <div class="d-flex">
+    <h2>{{object}}</h2>
+    {% if crud == "Read" %}
+      {% actions %}
         {% if obj_perms.edit %}
           {% if not object.is_manual_import %}
             <a class="dropdown-item" href="{% url 'lit:search_update' object.assessment.pk object.slug %}">Update {{object.get_search_type_display|lower}}</a>
@@ -13,9 +14,9 @@
           {% endif %}
         {% endif %}
         <a class="dropdown-item" href="{% url 'lit:api:assessment-reference-export' assessment.id %}?format=xlsx&searches={{object.id}}">Download to Excel</a>
-      </div>
-    </div>
-  {% endif %}
+      {% endactions %}
+    {% endif %}
+  </div>
   <table class="table table-sm table-striped">
     <colgroup>
       <col style="width: 30%;">
