--- a/hawc/apps/mgmt/templates/mgmt/assessment_dashboard.html
+++ b/hawc/apps/mgmt/templates/mgmt/assessment_dashboard.html
@@ -3,15 +3,13 @@
 {% load bs4 %}
 
 {% block content %}
-<h2 class="d-inline-block">Management dashboard</h2>
-<div class="dropdown btn-group float-right">
-  <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Actions</a>
-  <div class="dropdown-menu dropdown-menu-right">
+<div class="d-flex">
+  <h2>Management dashboard</h2>
+  {% actions %}
     <a class="dropdown-item" href="{% url 'mgmt:task-list' assessment.pk %}">Task list</a>
     <a class="dropdown-item" href="{% url 'mgmt:user-assessment-task-list' assessment.pk %}">My assigned tasks</a>
-  </div>
+  {% endactions %}
 </div>
-
 {% if object_list %}
 <div>
   <h3>All task summary</h3>
