--- a/hawc/apps/assessment/templates/assessment/assessment_home.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_home.html
@@ -4,17 +4,14 @@
 {% block content_outer %}
   <div class="d-flex">
     <h2>Welcome, {{ user.get_full_name }}.</h2>
-    <div class="dropdown ml-auto align-self-start">
-      <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Actions</button>
-      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-          <span class="dropdown-header">Assessment Editing</span>
-          {% if user.can_create_assessments %}
-          <a class="dropdown-item" href="{% url 'assessment:new' %}">Create a new assessment</a>
-          {% else %}
-          <p class="dropdown-item help-block">Assessment creation disabled - please <a href="{% url 'contact' %}">contact us</a> if needed.</p>
-          {% endif %}
-      </div>
-    </div>
+    {% actions %}
+      <span class="dropdown-header">Assessment Editing</span>
+      {% if user.can_create_assessments %}
+        <a class="dropdown-item" href="{% url 'assessment:new' %}">Create a new assessment</a>
+      {% else %}
+        <p class="dropdown-item help-block">Assessment creation disabled - please <a href="{% url 'contact' %}">contact us</a> if needed.</p>
+      {% endif %}
+    {% endactions %}
   </div>
   <p>Welcome to the HAWC portal. Here you're able to create new assessments or work on existing assessments.</p>
   {% include "common/inline_filter_form.html" %}
