--- a/hawc/apps/assessment/templates/assessment/assessment_log_list.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_log_list.html
@@ -2,19 +2,18 @@
 
 {% load url_replace %}
 {% load crispy_forms_tags %}
+{% load bs4 %}
 
 {% block content %}
-
-<h2 class="d-inline-block">{{assessment}} Logs</h2>
-<div class="dropdown btn-group float-right">
-    <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Actions</a>
-    <div class="dropdown-menu dropdown-menu-right">
+<div class="d-flex">
+    <h2>{{assessment}} Logs</h2>
+    {% actions %}
         <span class="dropdown-header">Download Logs</span>
         <a class="dropdown-item" href="{% url 'assessment:api:assessment-logs' assessment.pk 'assessment' %}?format=xlsx">Assessment</a>
         <a class="dropdown-item" href="{% url 'assessment:api:assessment-logs' assessment.pk 'riskofbias' %}?format=xlsx">Risk of bias</a>
         <a class="dropdown-item" href="{% url 'assessment:api:assessment-logs' assessment.pk 'animal' %}?format=xlsx">Animal</a>
         <a class="dropdown-item" href="{% url 'assessment:api:assessment-logs' assessment.pk 'epi' %}?format=xlsx">Epidemiology</a>
-    </div>
+    {% endactions %}
 </div>
 
 <div class="card">
