--- a/hawc/apps/bmd/templates/bmd/assessmentsettings_detail.html
+++ b/hawc/apps/bmd/templates/bmd/assessmentsettings_detail.html
@@ -1,15 +1,15 @@
 {% extends 'assessment-rooted.html' %}
+{% load bs4 %}
 
 {% block content %}
-  <h2 class="d-inline-block">{{object}}</h2>
-  {% if obj_perms.edit_assessment %}
-    <div class="dropdown btn-group float-right">
-      <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Actions</a>
-      <div class="dropdown-menu dropdown-menu-right">
+  <div class="d-flex">
+    <h2>{{object}}</h2>
+    {% if obj_perms.edit_assessment %}
+      {% actions %}
         <a class="dropdown-item" href="{% url 'bmd:assess_settings_update' assessment.pk %}">Update settings</a>
-      </div>
-    </div>
-  {% endif %}
+      {% endactions %}
+    {% endif %}
+  </div>
 
   <p>BMD assessment-settings can only be modified by project managers.</p>
 
