--- a/hawc/apps/bmd/templates/bmd/session_list.html
+++ b/hawc/apps/bmd/templates/bmd/session_list.html
@@ -1,21 +1,21 @@
 {% extends 'assessment-rooted.html' %}
+{% load bs4 %}
 
 {% block content %}
-    <h2 class="d-inline-block">BMD sessions</h2>
+    <div class="d-flex">
+      <h2>BMD sessions</h2>
+      {% if obj_perms.edit and crud == "Read" and assessment.bmd_settings.can_create_sessions %}
+        {% actions %}
+          <span class="dropdown-header">BMD editing</span>
+          <a class="dropdown-item" href="{% url 'bmd:session_create' object.pk %}">Create new</a>
+        {% endactions %}
+      {% endif %}
+    </div>
     {% if not assessment.bmd_settings.can_create_sessions %}
     <div class="alert alert-warning" role="alert">
       <p>{{assessment.bmd_settings.get_version_display}} is no longer supported by HAWC. Change the assessment benchmark dose settings to the
         newest BMDS version to create new sessions.</p>
     </div>
-    {% endif %}
-    {% if obj_perms.edit and crud == "Read" and assessment.bmd_settings.can_create_sessions %}
-      <div class="dropdown btn-group float-right">
-        <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Actions</a>
-        <div class="dropdown-menu dropdown-menu-right">
-            <span class="dropdown-header">BMD editing</span>
-            <a class="dropdown-item" href="{% url 'bmd:session_create' object.pk %}">Create new</a>
-        </div>
-      </div>
     {% endif %}
     <table class='table table-sm table-striped'>
       <thead>
