--- a/hawc/apps/riskofbias/templates/riskofbias/arob_detail.html
+++ b/hawc/apps/riskofbias/templates/riskofbias/arob_detail.html
@@ -2,11 +2,10 @@
 {% load bs4 %}
 
 {% block content %}
-<h2 class="d-inline-block">{{assessment.get_rob_name_display}} requirements</h2>
-{% if obj_perms.edit and crud == "Read" %}
-  <div class="btn-group float-right">
-    <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Actions</a>
-    <div class="dropdown-menu dropdown-menu-right">
+<div class="d-flex">
+  <h2>{{assessment.get_rob_name_display}} requirements</h2>
+  {% if obj_perms.edit and crud == "Read" %}
+    {% actions %}
       {% if obj_perms.edit_assessment %}
       <span class="dropdown-header">{{assessment.get_rob_name_display}} settings</span>
       <a class="dropdown-item" href="{% url 'riskofbias:arob_update' assessment.pk %}">Update requirements</a>
@@ -21,9 +20,9 @@
       <span class="dropdown-header">Data cleanup</span>
       <a class="dropdown-item" href="{% url 'assessment:clean_study_metrics' assessment.pk %}">Clean {{assessment.get_rob_name_display|lower}} responses</a>
       {% endif %}
-    </div>
-  </div>
-{% endif %}
+    {% endactions %}
+  {% endif %}
+</div>
 
 {{assessment.rob_settings.help_text|safe}}
 
