--- a/hawc/apps/study/templates/study/study_detail.html
+++ b/hawc/apps/study/templates/study/study_detail.html
@@ -4,68 +4,66 @@
 {% load bs4 %}
 
 {% block content %}
-  <h2 class="d-inline-block">{{object}}</h2>
-  {% if obj_perms.edit %}
-    <div class="dropdown btn-group float-right">
-      <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Actions</a>
-      <div class="dropdown-menu dropdown-menu-right">
-
-          <span class="dropdown-header">Study editing</span>
-          {% if object.editable %}
-          <a class="dropdown-item" href="{% url 'study:update' object.pk %}">Update study details</a>
-          <a class="dropdown-item" href="{% url 'lit:ref_edit' object.pk %}">Update reference</a>
-          {% endif %}
-
-          {% if obj_perms.edit_assessment %}
-          <a class="dropdown-item"
-              href="{% url 'study:toggle-lock' object.pk %}">{{ object.editable|yesno:"Lock study,Unlock study" }}</a>
-          {% endif %}
-
-          {% if object.editable %}
-            <a class="dropdown-item" href="{% url 'study:delete' object.pk %}">Delete study</a>
-            <a class="dropdown-item" href="{% url 'study:attachment_create' object.pk %}">Add an attachment</a>
-
-            {% if object.bioassay %}
-              <div class="dropdown-divider"></div>
-              <span class="dropdown-header">Animal bioassay editing</span>
-              <a class="dropdown-item" href="{% url 'animal:experiment_new' object.pk %}">Create new experiment</a>
-              <a class="dropdown-item" href="{% url 'animal:experiment_copy_selector' object.pk %}">Copy from existing</a>
+  <div class="d-flex">
+    <h2>{{object}}</h2>
+    {% include "common/unpublished_badge.html" %}
+    {% if obj_perms.edit %}
+      {% actions %}
+            <span class="dropdown-header">Study editing</span>
+            {% if object.editable %}
+            <a class="dropdown-item" href="{% url 'study:update' object.pk %}">Update study details</a>
+            <a class="dropdown-item" href="{% url 'lit:ref_edit' object.pk %}">Update reference</a>
             {% endif %}
 
-            {% if object.in_vitro %}
-              <div class="dropdown-divider"></div>
-              <span class="dropdown-header">In-vitro analysis editing</span>
-              <a class="dropdown-item" href="{% url 'invitro:experiment_create' object.pk %}">Create new experiment</a>
-              <a class="dropdown-item" href="{% url 'invitro:chemical_create' object.pk %}">Create new chemical</a>
-              <a class="dropdown-item" href="{% url 'invitro:celltype_create' object.pk %}">Create new cell-type</a>
+            {% if obj_perms.edit_assessment %}
+            <a class="dropdown-item" href="{% url 'study:toggle-lock' object.pk %}">{{ object.editable|yesno:"Lock study,Unlock study" }}</a>
             {% endif %}
 
-            {% if object.epi %}
-              <div class="dropdown-divider"></div>
-              <span class="dropdown-header">Epidemiology editing</span>
-              {% if assessment.epi_version == 1 %}
-                <a class="dropdown-item" href="{% url 'epi:sp_create' object.pk %}">Create new study population</a>
-                <a class="dropdown-item" href="{% url 'epi:sp_copy_selector' object.pk %}">Copy from existing</a>
-              {% elif assessment.epi_version == 2 %}
-                <a class="dropdown-item" href="{% url 'epiv2:design_create' object.pk %}">Create new study population</a>
+            {% if object.editable %}
+              <a class="dropdown-item" href="{% url 'study:delete' object.pk %}">Delete study</a>
+              <a class="dropdown-item" href="{% url 'study:attachment_create' object.pk %}">Add an attachment</a>
+
+              {% if object.bioassay %}
+                <div class="dropdown-divider"></div>
+                <span class="dropdown-header">Animal bioassay editing</span>
+                <a class="dropdown-item" href="{% url 'animal:experiment_new' object.pk %}">Create new experiment</a>
+                <a class="dropdown-item" href="{% url 'animal:experiment_copy_selector' object.pk %}">Copy from existing</a>
+              {% endif %}
+
+              {% if object.in_vitro %}
+                <div class="dropdown-divider"></div>
+                <span class="dropdown-header">In-vitro analysis editing</span>
+                <a class="dropdown-item" href="{% url 'invitro:experiment_create' object.pk %}">Create new experiment</a>
+                <a class="dropdown-item" href="{% url 'invitro:chemical_create' object.pk %}">Create new chemical</a>
+                <a class="dropdown-item" href="{% url 'invitro:celltype_create' object.pk %}">Create new cell-type</a>
+              {% endif %}
+
+              {% if object.epi %}
+                <div class="dropdown-divider"></div>
+                <span class="dropdown-header">Epidemiology editing</span>
+                {% if assessment.epi_version == 1 %}
+                  <a class="dropdown-item" href="{% url 'epi:sp_create' object.pk %}">Create new study population</a>
+                  <a class="dropdown-item" href="{% url 'epi:sp_copy_selector' object.pk %}">Copy from existing</a>
+                {% elif assessment.epi_version == 2 %}
+                  <a class="dropdown-item" href="{% url 'epiv2:design_create' object.pk %}">Create new study population</a>
+                {% endif %}
+              {% endif %}
+
+              {% if object.epi_meta %}
+                <div class="dropdown-divider"></div>
+                <span class="dropdown-header">Epidemiology meta-analysis editing</span>
+                <a class="dropdown-item" href="{% url 'meta:protocol_create' object.pk %}">Create new protocol</a>
+              {% endif %}
+
+              {% if object.eco %}
+                <div class="dropdown-divider"></div>
+                <span class="dropdown-header">Ecology editing</span>
+                <a class="dropdown-item" href="{% url 'eco:design_create' object.pk %}">Create new study design</a>
               {% endif %}
             {% endif %}
-
-            {% if object.epi_meta %}
-              <div class="dropdown-divider"></div>
-              <span class="dropdown-header">Epidemiology meta-analysis editing</span>
-              <a class="dropdown-item" href="{% url 'meta:protocol_create' object.pk %}">Create new protocol</a>
-            {% endif %}
-
-            {% if object.eco %}
-              <div class="dropdown-divider"></div>
-              <span class="dropdown-header">Ecology editing</span>
-              <a class="dropdown-item" href="{% url 'eco:design_create' object.pk %}">Create new study design</a>
-            {% endif %}
-          {% endif %}
-      </div>
-    </div>
-  {% endif %}
+      {% endactions %}
+    {% endif %}
+  </div>
 
   {% if not object.get_study_types and obj_perms.edit %}
     {% alert warning %}
@@ -100,8 +98,12 @@
   {% if crud == "Read" %}
 
     {% if assessment.enable_risk_of_bias and object.riskofbiases.count > 0 %}
-      <a class="btn btn-primary float-right" href="{% url 'riskofbias:rob_detail' object.pk %}">View details</a>
-      <h3 class="d-inline-block">{{assessment.get_rob_name_display}}</h3>
+      <div class="d-flex">
+        <h3>{{assessment.get_rob_name_display}}</h3>
+        <div class="dropdown btn-group ml-auto align-self-start">
+          <a class="btn btn-primary" href="{% url 'riskofbias:rob_detail' object.pk %}">View details</a>
+        </div>
+      </div>
       <div id="rob_plot" class="mb-3"></div>
     {% endif %}
 
