--- a/hawc/apps/study/templates/study/study_list.html
+++ b/hawc/apps/study/templates/study/study_list.html
@@ -3,25 +3,25 @@
 {% load bs4 %}
 
 {% block content %}
-<h2 class="d-inline-block">Available studies ({{page_obj.paginator.count}} found)</h2>
-{% if obj_perms.edit and crud == "Read" %}
-<div class="dropdown btn-group float-right">
-    <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Actions</a>
-    <div class="dropdown-menu dropdown-menu-right">
-        <span class="dropdown-header">Study editing</span>
-        <a class="dropdown-item" href="{% url 'study:new_ref' assessment.pk %}">Create new</a>
-        <a class="dropdown-item" href="{% url 'study:create_from_identifier' assessment.pk %}">Create from
-            identifier</a>
-        {% if assessment.enable_risk_of_bias %}
-        <div class="dropdown-divider"></div>
-        <span class="dropdown-header">{{assessment.get_rob_name_display}}</span>
-        <a class="dropdown-item" href="{% url 'riskofbias:arob_detail' assessment.pk %}">View requirements</a>
-        <a class="dropdown-item" href="{% url 'riskofbias:rob_assignments' assessment.pk %}">View assignments</a>
-        {% endif %}
-    </div>
+<div class="d-flex">
+    <h2>Available studies ({{page_obj.paginator.count}} found)</h2>
+    {% if obj_perms.edit and crud == "Read" %}
+        {% actions %}
+            <span class="dropdown-header">Study editing</span>
+            <a class="dropdown-item" href="{% url 'study:new_ref' assessment.pk %}">Create new</a>
+            <a class="dropdown-item" href="{% url 'study:create_from_identifier' assessment.pk %}">Create from identifier</a>
+            {% if assessment.enable_risk_of_bias %}
+            <div class="dropdown-divider"></div>
+            <span class="dropdown-header">{{assessment.get_rob_name_display}}</span>
+            <a class="dropdown-item" href="{% url 'riskofbias:arob_detail' assessment.pk %}">View requirements</a>
+            <a class="dropdown-item" href="{% url 'riskofbias:rob_assignments' assessment.pk %}">View assignments</a>
+            {% endif %}
+        {% endactions %}
+    {% endif %}
 </div>
-{% endif %}
+
 {% include 'common/inline_filter_form.html' %}
+
 <table id="mainTbl" class="table table-sm table-striped">
     {% bs4_colgroup '25,40,7,7,7,7,7' %}
     {% bs4_thead 'Short citation,Full citation,Bioassay,Epidemiology,Epi. meta-analysis,In vitro,Ecology' %}
