--- a/hawc/apps/summary/templates/summary/summarytable_detail.html
+++ b/hawc/apps/summary/templates/summary/summarytable_detail.html
@@ -1,28 +1,29 @@
 {% extends 'assessment-rooted.html' %}
+{% load bs4 %}
 
 {% block content %}
-  <h2 class="d-inline-block">{{object}}</h2>
-  {% if crud == "Read" %}
-  <div class="dropdown btn-group float-right">
-    <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Actions</a>
-    <div class="dropdown-menu dropdown-menu-right">
-      <span class="dropdown-header">Reporting</span>
-      <a class="dropdown-item" href="{{object.get_api_word_url}}">
-        <i class="fa fa-fw fa-file-word-o"></i>&nbsp;Download report
-      </a>
-      {% if obj_perms.edit %}
-      <div class="dropdown-divider"></div>
-      <span class="dropdown-header">Edit settings</span>
-      <a class="dropdown-item" href="{{object.get_update_url}}">
-        <i class="fa fa-fw fa-edit"></i>&nbsp;Update
-      </a>
-      <a class="dropdown-item" href="{{object.get_delete_url}}">
-        <i class="fa fa-fw fa-trash"></i>&nbsp;Delete
-      </a>
-      {% endif %}
-    </div>
+  <div class="d-flex">
+    <h2>{{object}}</h2>
+    {% include "common/unpublished_badge.html" %}
+    {% if crud == "Read" %}
+      {% actions %}
+        <span class="dropdown-header">Reporting</span>
+        <a class="dropdown-item" href="{{object.get_api_word_url}}">
+          <i class="fa fa-fw fa-file-word-o"></i>&nbsp;Download report
+        </a>
+        {% if obj_perms.edit %}
+        <div class="dropdown-divider"></div>
+        <span class="dropdown-header">Edit settings</span>
+        <a class="dropdown-item" href="{{object.get_update_url}}">
+          <i class="fa fa-fw fa-edit"></i>&nbsp;Update
+        </a>
+        <a class="dropdown-item" href="{{object.get_delete_url}}">
+          <i class="fa fa-fw fa-trash"></i>&nbsp;Delete
+        </a>
+        {% endif %}
+      {% endactions %}
+    {% endif %}
   </div>
-  {% endif %}
   <div id="main" style="min-height: 400px"></div>
 {% endblock %}
 
