--- a/hawc/apps/summary/templates/summary/summarytable_list.html
+++ b/hawc/apps/summary/templates/summary/summarytable_list.html
@@ -1,20 +1,21 @@
 {% extends 'assessment-rooted.html' %}
 
+{% load bs4 %}
+
 {% block content %}
-<h2 class="d-inline-block">Available tables</h2>
-{% if obj_perms.edit %}
-<div class="dropdown btn-group float-right">
-  <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Actions</a>
-  <div class="dropdown-menu dropdown-menu-right">
-    <a class="dropdown-item" href="{% url 'summary:tables_create_selector' assessment.pk %}">
-      <i class="fa fa-fw fa-edit"></i>&nbsp;Create new table
-    </a>
-    <a class="dropdown-item" href="{% url 'summary:tables_copy' assessment.pk %}">
-      <i class="fa fa-fw fa-copy"></i>&nbsp;Copy from existing
-    </a>
-  </div>
+<div class="d-flex">
+  <h2>Available tables</h2>
+  {% if obj_perms.edit %}
+    {% actions %}
+      <a class="dropdown-item" href="{% url 'summary:tables_create_selector' assessment.pk %}">
+        <i class="fa fa-fw fa-edit"></i>&nbsp;Create new table
+      </a>
+      <a class="dropdown-item" href="{% url 'summary:tables_copy' assessment.pk %}">
+        <i class="fa fa-fw fa-copy"></i>&nbsp;Copy from existing
+      </a>
+    {% endactions %}
+  {% endif %}
 </div>
-{% endif %}
 
 {% include 'common/inline_filter_form.html' %}
 
