--- a/hawc/apps/assessment/templates/assessment/assessment_log_list.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_log_list.html
@@ -16,18 +16,7 @@
     {% endactions %}
 </div>
 
-<div class="card">
-    <div class="card-header">
-        <button class="btn btn-link" data-toggle="collapse" data-target="#filterForm">
-            Filter logs
-        </button>
-    </div>
-    <div id="filterForm" class="show">
-        <div class="card-body container-fluid">
-            {% crispy form %}
-        </div>
-    </div>
-</div>
+{% include 'common/inline_filter_form.html' %}
 
 {% url_replace page=None as params%}
 
