add schema preview

--- a/hawc/apps/form_library/templates/form_library/custom_data_extraction_form.html
+++ b/hawc/apps/form_library/templates/form_library/custom_data_extraction_form.html
@@ -4,4 +4,5 @@
 
 {% block content %}
 {% crispy form %}
+{% include 'form_library/components/modal.html' with modal_id='schema-preview' %}
 {% endblock %}
