--- a/hawc/apps/summary/templates/summary/visual_list.html
+++ b/hawc/apps/summary/templates/summary/visual_list.html
@@ -22,7 +22,7 @@
 
   <table id="mainTbl" class="table table-sm table-striped">
     {% bs4_colgroup "50,26,12,12" %}
-    {% bs4_thead "Viusal,Type,Created,Modified" %}
+    {% bs4_thead "Visual,Type,Created,Modified" %}
     <tbody>
       {% for visual in objects %}
       <tr>
