--- a/hawc/apps/eco/templates/eco/result_list.html
+++ b/hawc/apps/eco/templates/eco/result_list.html
@@ -3,7 +3,12 @@
 {% load bs4 split %}
 
 {% block content %}
-<h2>Results ({{page_obj.paginator.count}} found)</h2>
+<div class="d-flex mb-2">
+    <h2 class="mb-0">Results ({{page_obj.paginator.count}} found)</h2>
+    {% if feature_flags.ENABLE_FILTER_DOWNLOADS and page_obj.paginator.count > 0 %}
+    <a href="{% url 'eco:api:assessment-export' assessment.id %}?format=xlsx" class="btn btn-sm btn-primary align-self-center flex-shrink-0 ml-3"><i class="fa fa-download" aria-hidden="true"></i>&nbsp; Download {{page_obj.paginator.count}} result(s)</a>
+    {% endif %}
+</div>
 {% include 'common/inline_filter_form.html' %}
 <table class="table table-sm table-striped">
     {% bs4_colgroup '15,10,10,10,15,15,10,15' %}
