--- a/hawc/apps/invitro/templates/invitro/ivendpoint_list.html
+++ b/hawc/apps/invitro/templates/invitro/ivendpoint_list.html
@@ -3,7 +3,12 @@
 {% load bs4 %}
 
 {% block content %}
-<h2><i>In vitro</i> endpoints ({{page_obj.paginator.count}} found)</h2>
+<div class="d-flex mb-2">
+    <h2 class="mb-0"><i>In vitro</i> endpoints ({{page_obj.paginator.count}} found)</h2>
+    {% if feature_flags.ENABLE_FILTER_DOWNLOADS and page_obj.paginator.count > 0 %}
+    <a href="{% url 'invitro:api:assessment-full-export' assessment.id %}?format=xlsx" class="btn btn-sm btn-primary align-self-center flex-shrink-0 ml-3"><i class="fa fa-download" aria-hidden="true"></i>&nbsp; Download {{page_obj.paginator.count}} endpoint(s)</a>
+    {% endif %}
+</div>
 {% include 'common/inline_filter_form.html' %}
 <table id="mainTbl" class="table table-sm table-striped">
     {% bs4_colgroup '10,13,12,20,16,13,8,8' %}
