move shared code to common location

--- a/hawc/apps/summary/templates/summary/datapivot_form.html
+++ b/hawc/apps/summary/templates/summary/datapivot_form.html
@@ -35,22 +35,7 @@
           );
       })
 
-      const bindCheckboxToPrefilter = function(){
-        // show/hide prefilter based on checkbox selection
-        const checkbox = $(this),
-          input = $(`#id_prefilters-${checkbox.data('pf')}`),
-          inputDiv = $(`#div_id_prefilters-${checkbox.data('pf')}`),
-          hasItems = input.val().length>0;
-
-        checkbox.prop('checked', hasItems);
-        checkbox.on('change', function(){
-          inputDiv.toggle(checkbox.prop('checked'));
-          if (checkbox.prop('checked') === false){
-            input.val('');
-          }
-        }).trigger('change');
-      }
-      $('input[data-pf]').each(bindCheckboxToPrefilter)
+      $('input[data-pf]').each(window.app.HAWCUtils.bindCheckboxToPrefilter)
     });
   </script>
 {% endblock extrajs %}
