--- a/hawc/apps/summary/templates/summary/visual_form.html
+++ b/hawc/apps/summary/templates/summary/visual_form.html
@@ -67,6 +67,8 @@
       }
 
       if (config.visual_type !== 6) {
+        $('input[data-pf]').each(window.app.HAWCUtils.bindCheckboxToPrefilter)
+
         window.app.startup("smartTagsStartup", function (smartTags) {
           new smartTags.SmartTagEditor(
             $('#id_caption'),
@@ -79,23 +81,6 @@
           $('#id_slug').val(window.app.HAWCUtils.urlify($(this).val()));
         });
         {% endif %}
-
-        const bindCheckboxToPrefilter = function(){
-            // show/hide prefilter based on checkbox selection
-            const checkbox = $(this),
-            input = $(`#id_prefilters-${checkbox.data('pf')}`),
-            inputDiv = $(`#div_id_prefilters-${checkbox.data('pf')}`),
-            hasItems = input.val().length>0;
-
-            checkbox.prop('checked', hasItems);
-            checkbox.on('change', function(){
-            inputDiv.toggle(checkbox.prop('checked'));
-            if (checkbox.prop('checked') === false){
-                input.val('');
-            }
-            }).trigger('change');
-        }
-        $('input[data-pf]').each(bindCheckboxToPrefilter)
       }
     });
   </script>
