--- a/hawc/apps/udf/templates/udf/udf_list.html
+++ b/hawc/apps/udf/templates/udf/udf_list.html
@@ -6,7 +6,7 @@
 <div class="dropdown btn-group float-right">
     <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Actions</a>
     <div class="dropdown-menu dropdown-menu-right">
-        <a class="dropdown-item" href="{% url 'form_library:form_create' %}">Create a form</a>
+        <a class="dropdown-item" href="{% url 'udf:udf_create' %}">Create a form</a>
     </div>
 </div>
 <h2>User Defined Forms</h2>
