--- a/hawc/apps/udf/templates/udf/tagbinding_detail.html
+++ b/hawc/apps/udf/templates/udf/tagbinding_detail.html
@@ -1,15 +1,15 @@
 {% extends 'assessment-rooted.html' %}
 
-{% load hawc %}
+{% load bs4 %}
 
 {% block content %}
 {% if crud == "Read" %}
 <div class="d-flex">
-    <h3>Tag/Form binding</h3>
+    <h2>Tag/Form binding</h2>
     {% if obj_perms.edit %}
     {% actions %}
-    <a class="dropdown-item" href="{% url 'udf:model_update' object.pk %}">Update</a>
-    <a class="dropdown-item" href="{% url 'udf:model_delete' object.pk %}">Delete</a>
+    <a class="dropdown-item" href="{% url 'udf:tag_update' object.pk %}">Update</a>
+    <a class="dropdown-item" href="{% url 'udf:tag_delete' object.pk %}">Delete</a>
     {% endactions %}
     {% endif %}
 </div>
@@ -34,7 +34,7 @@
         </tr>
         <tr>
             <th>Form</th>
-            <td><a href="{% url 'udf:form_detail' object.form.pk %}">{{object.form.name}}</a></td>
+            <td><a href="{% url 'udf:udf_detail' object.form.pk %}">{{object.form.name}}</a></td>
         </tr>
     </tbody>
 </table>
