add built-in form preview

--- a/hawc/apps/udf/templates/udf/modelbinding_detail.html
+++ b/hawc/apps/udf/templates/udf/modelbinding_detail.html
@@ -1,6 +1,7 @@
 {% extends 'assessment-rooted.html' %}
 
 {% load bs4 %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 {% if crud == "Read" %}
@@ -15,26 +16,31 @@
 </div>
 {% endif %}
 <table class="table table-sm table-striped">
-    <colgroup>
-        <col style="width: 30%;">
-        <col style="width: 70%;">
-    </colgroup>
+    {% bs4_colgroup '15,85' %}
     <tbody>
-        <tr>
-            <th>Assessment</th>
-            <td>{{object.assessment}}</td>
-        </tr>
         <tr>
             <th>Model</th>
             <td>{{object.content_type}}</td>
+        </tr>
+        <tr>
+            <th>Form</th>
+            <td>
+                <p><a href="{% url 'udf:udf_detail' object.form.pk %}">{{object.form.name}}</a></p>
+                <p class='my-3'><u>Form Preview:</u></p>
+                {% crispy object.form_instance %}
+            </td>
         </tr>
         <tr>
             <th>Creator</th>
             <td>{{object.creator}}</td>
         </tr>
         <tr>
-            <th>Form</th>
-            <td><a href="{% url 'udf:udf_detail' object.form.pk %}">{{object.form.name}}</a></td>
+            <th>Created</th>
+            <td>{{object.created}}</td>
+        </tr>
+        <tr>
+            <th>Last Updated</th>
+            <td>{{object.last_updated}}</td>
         </tr>
     </tbody>
 </table>
