render saved UDF data on study detail page

--- a/hawc/apps/study/templates/study/study_detail.html
+++ b/hawc/apps/study/templates/study/study_detail.html
@@ -133,6 +133,10 @@
       {% include "eco/fragments/_design_list.html" with object_list=object.eco_designs.all %}
     {% endif %}
 
+    {% if udf_content %}
+      {% include "udf/fragments/_udf_content.html" with object=udf_content %}
+    {% endif %}
+
   {% endif %}
 
 {% endblock %}
